<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/selector_home_index"
        android:title="@string/home_nav_index" />

    <item
        android:id="@+id/home_type"
        android:icon="@drawable/selector_home_shop"
        android:title="@string/home_nav_sc" />

    <item
        android:id="@+id/home_yhq"
        android:icon="@drawable/selector_home_blackcard"
        android:title="@string/home_nav_bc" />
    <item
        android:id="@+id/home_al"
        android:icon="@drawable/selector_home_message"
        android:title="@string/home_nav_sy" />

    <item
        android:id="@+id/home_me"
        android:icon="@drawable/selector_home_me"
        android:title="@string/home_nav_me" />
</menu>