<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activity"
            type="com.hpkj.sheplive.activity.RegActivity" />

        <variable
            name="click"
            type="com.hpkj.sheplive.utils.ClickUtil" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <com.hjq.bar.TitleBar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_top_height"
            app:lineVisible="false"
            android:layout_marginTop="@dimen/dp_30"
            app:title="欢迎注册" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <ImageView
                    android:layout_width="@dimen/dp_150"
                    android:layout_height="@dimen/dp_150"
                    android:layout_gravity="center_horizontal"
                    android:background="@mipmap/register_logo" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@drawable/login_edittext_bg"
                    >

                    <com.hjq.widget.view.ClearEditText
                        android:id="@+id/et_reg_phone"
                        style="@style/LoginRegEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="*输入手机号"
                        android:inputType="textVisiblePassword"
                        android:singleLine="true"
                        android:layout_weight="1"
                        app:regexType="mobile" />
                    <ImageView
                        android:layout_width="@dimen/dp_20"
                        android:layout_height="@dimen/dp_20"
                        android:src="@mipmap/login_ic_mobile"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/dp_10"
                        />
                </LinearLayout>




                <LinearLayout
                    android:id="@+id/ll_register_edit1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.hjq.widget.view.ClearEditText
                        android:id="@+id/et_check_code"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="2"
                        android:background="@drawable/login_edittext_bg1"
                        android:hint="*验证码"
                        android:includeFontPadding="false"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/color_999999"
                        android:textSize="@dimen/txt_size_13"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toLeftOf="@id/guideline2"
                        app:layout_constraintRight_toRightOf="@id/guideline3"
                        app:layout_constraintTop_toTopOf="@id/guideline" />

                    <com.hjq.widget.view.CountdownView
                        android:id="@+id/cv_register_countdown"
                        style="@style/CountdownViewStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/login_edittext_bg2"
                        android:gravity="center"
                        android:text="@string/getcheckcode"
                        android:textColor="@color/white"
                        app:clickview="@{(view)->activity.onClick(view)}" />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_edittext_bg"
                    >
                    <com.hjq.widget.view.ClearEditText
                        android:id="@+id/et_invite_code"
                        style="@style/LoginRegEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="*输入邀请码"
                        android:maxLength="8"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:singleLine="true" />
                    <ImageView
                        android:layout_width="@dimen/dp_20"
                        android:layout_height="@dimen/dp_20"
                        android:src="@mipmap/reg_ic_invite"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/dp_10"
                        />
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_edittext_bg"
                >
                <com.hjq.widget.view.PasswordEditText
                    android:id="@+id/et_register_password"
                    style="@style/LoginRegEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_password_hint1"
                    android:layout_weight="1"
                    android:maxLength="18"
                    android:maxLines="1" />
                <ImageView
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:src="@mipmap/login_ic_psw"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/dp_10"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_edittext_bg"
                >
                <com.hjq.widget.view.PasswordEditText
                    android:id="@+id/et_register_password2"
                    style="@style/LoginRegEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_password_hint2"
                    android:maxLength="20"
                    android:layout_weight="1"
                    android:maxLines="1" />
                <ImageView
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:src="@mipmap/login_ic_psw"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/dp_10"
                    />
            </LinearLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_doReg"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_but_bg"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_size_16"
                    app:clickview="@{(view)->activity.onClick(view)}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="注册/登录代表已阅读并同意"
                        android:textColor="@color/color_737373"
                        android:textSize="12sp" />

                    <com.example.myapplication.view.MytextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="《用户注册协议》"
                        android:textColor="@color/color_F93D3D"
                        android:textSize="@dimen/txt_size_11"
                        app:clickview="@{(view)->click.enterH5(view,1)}" />


                </LinearLayout>
                <com.example.myapplication.view.MytextView
                    android:id="@+id/tv_tologin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="已有账号，去登录>>"
                    android:textColor="@color/color_80000000"
                    app:clickview="@{(view)->activity.onClick(view)}"
                    android:textSize="@dimen/txt_size_16"/>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>